add stock web services
